@@ -1,7 +1,10 @@
 2014-08-24  Niels Möller  <nisse@lysator.liu.se>
 
 	* testsuite/ecdh-test.c: Test ecc_point_mul and ecc_point_mul_g,
-	using test data generated by ecc-ref.gp.
+	using test data generated by ecc-ref.gp. Tests for all curves
+	except curve25519, which doesn't yet work with the general
+	ecc_point interface.
+
 	* testsuite/Makefile.in (TS_HOGWEED_SOURCES): Added ecdh-test.c.
 
 	* misc/ecc-ref.gp: Script to generate ECDH test data.
